--- a/Pages/List.xaml
+++ b/Pages/List.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="crud_perfume.Pages.List"
+             Background="#FFF"
              Title="List">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Incluir" IconImageSource="incluirproduto.png" Clicked="AdicionarPerfume"/>
