--- a/Pages/Create.xaml
+++ b/Pages/Create.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="crud_perfume.Pages.Create"
+              BackgroundImageSource="fundoperfume2.jpg"
                      Title="{Binding Nome}">
 
     <ContentPage.ToolbarItems>
