--- a/Pages/Update.xaml
+++ b/Pages/Update.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="crud_perfume.Pages.NewPage1"
-             BackgroundImageSource="fundoator.png"
+              BackgroundImageSource="fundoperfume2.jpg"
              Title="{Binding Nome}">
 
     <!-- Botão de salvar -->
